--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Backend API for BoomGhoom - Social Events & Group Activities Platform",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "tsx watch src/index.ts",
+    "dev": "nodemon",
     "build": "tsc",
-    "start": "node dist/index.js",
+    "start": "node src/index.js",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
     "format": "prettier --write \"src/**/*.ts\"",
@@ -27,68 +27,68 @@
   "author": "BoomGhoom Team",
   "license": "UNLICENSED",
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^8.0.3",
-    "redis": "^4.6.12",
-    "ioredis": "^5.3.2",
-    "socket.io": "^4.7.2",
-    "jsonwebtoken": "^9.0.2",
-    "bcryptjs": "^2.4.3",
-    "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0",
-    "passport-apple": "^2.0.2",
-    "zod": "^3.22.4",
-    "winston": "^3.11.0",
-    "helmet": "^7.1.0",
-    "cors": "^2.8.5",
-    "compression": "^1.7.4",
-    "express-rate-limit": "^7.1.5",
-    "rate-limit-redis": "^4.2.0",
-    "multer": "^1.4.5-lts.1",
-    "sharp": "^0.33.1",
-    "uuid": "^9.0.1",
-    "nanoid": "^5.0.4",
-    "dayjs": "^1.11.10",
-    "lodash": "^4.17.21",
-    "crypto-js": "^4.2.0",
-    "axios": "^1.6.2",
-    "dotenv": "^16.3.1",
-    "bull": "^4.12.0",
-    "bullmq": "^5.1.0",
-    "aws-sdk": "^2.1517.0",
     "@aws-sdk/client-s3": "^3.470.0",
     "@aws-sdk/s3-request-presigner": "^3.470.0",
+    "aws-sdk": "^2.1517.0",
+    "axios": "^1.6.2",
+    "bcryptjs": "^2.4.3",
+    "bull": "^4.12.0",
+    "bullmq": "^5.1.0",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
+    "dayjs": "^1.11.10",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
+    "firebase-admin": "^12.0.0",
     "geolib": "^3.3.4",
+    "helmet": "^7.1.0",
+    "ioredis": "^5.3.2",
+    "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
+    "mongoose": "^8.0.3",
     "mongoose-paginate-v2": "^1.8.0",
-    "firebase-admin": "^12.0.0"
+    "multer": "^1.4.5-lts.1",
+    "nanoid": "^5.0.4",
+    "passport": "^0.7.0",
+    "passport-apple": "^2.0.2",
+    "passport-google-oauth20": "^2.0.0",
+    "rate-limit-redis": "^4.2.0",
+    "redis": "^4.6.12",
+    "sharp": "^0.33.1",
+    "socket.io": "^4.7.2",
+    "uuid": "^9.0.1",
+    "winston": "^3.11.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.10.4",
     "@types/bcryptjs": "^2.4.6",
+    "@types/compression": "^1.7.5",
+    "@types/cors": "^2.8.17",
+    "@types/crypto-js": "^4.2.1",
+    "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.11",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/lodash": "^4.14.202",
+    "@types/multer": "^1.4.11",
+    "@types/node": "^20.10.4",
     "@types/passport": "^1.0.16",
     "@types/passport-google-oauth20": "^2.0.14",
-    "@types/cors": "^2.8.17",
-    "@types/compression": "^1.7.5",
-    "@types/multer": "^1.4.11",
+    "@types/supertest": "^6.0.2",
     "@types/uuid": "^9.0.7",
-    "@types/lodash": "^4.14.202",
-    "@types/crypto-js": "^4.2.1",
-    "typescript": "^5.3.3",
-    "tsx": "^4.6.2",
-    "eslint": "^8.56.0",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
-    "prettier": "^3.1.1",
+    "eslint": "^8.56.0",
     "jest": "^29.7.0",
-    "@types/jest": "^29.5.11",
-    "ts-jest": "^29.1.1",
+    "nodemon": "^3.1.11",
+    "prettier": "^3.1.1",
     "supertest": "^6.3.3",
-    "@types/supertest": "^6.0.2"
+    "ts-jest": "^29.1.1",
+    "tsx": "^4.6.2",
+    "typescript": "^5.3.3"
   },
   "engines": {
     "node": ">=18.0.0"
   }
 }
-
