Update package.json to include module type, enhance build script with tsc-alias, and remove outdated dependency.

--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "boomghoom-backend",
   "version": "1.0.0",
+  "type": "module",
   "description": "Backend API for BoomGhoom - Social Events & Group Activities Platform",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "nodemon",
-    "build": "tsc",
-    "start": "node dist/index.js"
-  },
+  "dev": "nodemon",
+  "build": "tsc",
+  "start": "node dist/index.js",
+  "build": "tsc -p tsconfig.build.json && tsc-alias"
+},
+
   "keywords": [
     "events",
     "social",
@@ -77,7 +80,6 @@
     "prettier": "^3.1.1",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
-    "tsc-alias": "^1.8.16",
     "tsx": "^4.6.2",
     "typescript": "^5.3.3"
   },
