--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "main": "dist/index.js",
   "scripts": {
   "dev": "nodemon",
-  "build": "tsc",
+  "build": "tsc -p tsconfig.build.json && tsc-alias",
   "start": "node dist/index.js",
-  "build": "tsc -p tsconfig.build.json && tsc-alias"
+  "start:ts": "tsx src/index.ts"
 },
 
   "keywords": [
