--- a/package.json
+++ b/package.json
@@ -5,12 +5,11 @@
   "description": "Backend API for BoomGhoom - Social Events & Group Activities Platform",
   "main": "dist/index.js",
   "scripts": {
-  "dev": "nodemon",
-  "build": "tsc -p tsconfig.build.json && tsc-alias",
-  "start": "node dist/index.js",
-  "start:ts": "tsx src/index.ts"
-},
-
+    "dev": "nodemon",
+    "build": "tsc -p tsconfig.build.json && tsc-alias",
+    "start": "node dist/index.js",
+    "start:ts": "tsx src/index.ts"
+  },
   "keywords": [
     "events",
     "social",
@@ -49,6 +48,7 @@
     "passport": "^0.7.0",
     "passport-apple": "^2.0.2",
     "passport-google-oauth20": "^2.0.0",
+    "qrcode": "^1.5.4",
     "rate-limit-redis": "^4.2.0",
     "redis": "^4.6.12",
     "sharp": "^0.33.1",
@@ -70,6 +70,7 @@
     "@types/node": "^20.10.4",
     "@types/passport": "^1.0.16",
     "@types/passport-google-oauth20": "^2.0.14",
+    "@types/qrcode": "^1.5.6",
     "@types/supertest": "^6.0.2",
     "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
